<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">分享笔迹</string>
    <string name="home_screen_title">笔迹本</string>
    <string name="plaza_screen_title">广场</string>
    <string name="plaza_screen_title_note">作品主页</string>
    <string name="home_screen_calendar_page_title">日历</string>
    <string name="menu_right_count">账户</string>
    <string name="menu_right_info">通知</string>
    <string name="menu_right_feedback">反馈</string>
    <string name="menu_right_setting">设置</string>
    <string name="edit_pick_color">请选择笔迹颜色</string>
    <string name="edit_pick_face">请选择表情</string>
    <string name="edit_pick_thinkness">请选择笔迹粗细</string>
    <string name="calendar_mon">周一</string>
    <string name="calendar_tue">周二</string>
    <string name="calendar_wed">周三</string>
    <string name="calendar_thu">周四</string>
    <string name="calendar_fri">周五</string>
    <string name="calendar_sat">周六</string>
    <string name="calendar_sun">周日</string>
    <string-array name="diary_category_array">
        <item>乐享美食</item>
        <item>旅游玩乐</item>
        <item>浪漫婚恋</item>
        <item>辣妈萌宝</item>
        <item>幸福居家</item>
    </string-array>
    <string name="diary_category1">乐享美食</string>
    <string name="diary_category2">旅游玩乐</string>
    <string name="diary_category3">浪漫婚恋</string>
    <string name="diary_category4">辣妈萌宝</string>
    <string name="diary_category5">幸福居家</string>
    <string name="weather_sunny">晴</string>
    <string name="weather_cloudy">多云</string>
    <string name="weather_rain">雨</string>
    <string name="weather_snow">雪</string>
    <string name="save_and_share">同时分享到广场</string>
    <string name="save_only">保存</string>
    <string name="not_save">不保存</string>
    <string name="saving_note_now">正在保存笔迹</string>
    <string name="note_input_title">请输入标题！</string>
    <string name="choose_font">请选择字体</string>
    <string name="font_xdxwz">新蒂小丸子</string>
    <string name="font_droidsans">DroidSans</string>
    <string name="font_droidserif_italic">DroidSerif-Italic</string>
    <string name="more_info">消息</string>
    <string name="more_setting">设置</string>
    <string name="setting_title">设置</string>
    <string name="photo_add_sel">请选择来源</string>
    <string name="account_bounded">已绑定</string>
    <string name="account_unbound">未绑定</string>
    <string name="account_bound_progross">正在绑定...</string>
    <string name="account_bound_failed">账号绑定失败，请稍候再试！</string>
    <string name="account_bound_failed_exist">该账号已经被绑定过啦，换一个吧！</string>
    <string name="account_bound_success_sina">现在你也可以使用新浪账号登录"分享笔迹"啦！</string>
    <string name="account_bound_success_qq">现在你也可以使用QQ账号登录"分享笔迹"啦！</string>
    <string name="account_bound_success_renren">现在你也可以使用人人账号登录"分享笔迹"啦！</string>
    <string name="account_bound_sina_none">您还未绑定新浪账号！</string>
    <string name="account_bound_qq_none">您还未绑定QQ账号！</string>
    <string name="account_bound_renren_none">您还未绑定人人账号！</string>
    <string name="share_setting_title">分享设置</string>
    <string name="setting_tips">提示</string>
    <string name="no_login_info">请先登录</string>
    <string name="network_none">无法连接到网络，请检查网络设置！</string>
    <string name="account_title">我的帐号</string>
    <string name="account_user_account">分享笔迹帐号</string>
    <string name="account_change_passwd">更改密码</string>
    <string name="account_new_passwd">新密码</string>
    <string name="account_confirm_passwd">确认密码</string>
    <string name="confirm_change">确认修改</string>
    <string name="album_title">我的相册</string>
    <string name="album_gallery_title">%1$d/%2$d</string>
    <string name="image_upload_failed" translatable="false">上传图片失败或者上传被取消了</string>
    <string name="image_download_failed" translatable="false">下载图片失败，网络环境或服务器不可访问</string>
    <string name="image_file_name_format" translatable="false">"_yyyyMMdd_HHmmss"</string>
    <string name="image_create_cache_file_failed_unknown" translatable="false">生成本地缓存文件失败，未知错误</string>
    <string name="image_create_cache_file_failed_io" translatable="false">生成本地缓存文件失败，请检测是否未插入sdcard</string>
    <string name="image_create_cache_file_failed_web" translatable="false">获取图片错误</string>
    <string name="msg_img_source">请选择图片来源：</string>
	<string name="btn_img_source_camera">相机拍摄</string>
	<string name="btn_img_source_local">本地相册</string>
	<string name="select_file_not_image">您选择的并非图片文件</string>
    <string name="personal_info_title">个人信息</string>
    <string name="personal_info_set_avatar">设置头像</string>
    <string name="personal_info_name">昵称：</string>
    <string name="personal_info_sex">性别：</string>
    <string name="personal_info_sex_female">女</string>
    <string name="personal_info_sex_male">男</string>
    <string name="personal_info_region">地区：</string>
    <string name="personal_info_loadavatar_failed">头像下载失败！</string>
    <string name="update_progress">正在提交修改...</string>
    <string name="update_failed">修改失败！</string>
    <string name="update_success">修改成功！</string>
    <string name="toast_status_read">当前为阅读模式</string>
    <string name="graffit_erase_enable">橡皮擦已开启</string>
    <string name="login_title">登录</string>
    <string name="login_tips">可用以下账号登录</string>
    <string name="login_sina">微博账号</string>
    <string name="login_qq">QQ账号</string>
    <string name="login_renren">人人账号</string>
    <string name="login_or">或者</string>
    <string name="login_username">请输入帐号(邮箱)</string>
    <string name="login_auto">下次自动登录</string>
    <string name="login_savepassword">记住密码</string>
    <string name="login_password">请输入密码</string>
    <string name="login_btn">账号登录</string>
    <string name="logout_btn">退出登录</string>
    <string name="login_relogin">重新登录</string>
    <string name="login_failed">呃，登录失败了！再试一次吧！</string>
    <string name="login_err_username_format">请输入正确格式的邮箱！</string>
    <string name="login_err_password_format">密码为6至16位的数字和字母组合！</string>
    <string name="login_err_username_not_exist">用户名不存在！</string>
    <string name="login_err_password_wrong">用户名或密码错误！</string>
    <string name="login_err_server_internal">呃，服务器可能出了点问题，请稍候再试！</string>
    <string name="login_findpassword">忘记密码？</string>
    <string name="logout_title">确定退出登录？</string>
    <string name="login_dialog_msg">正在登录...</string>
    <string name="login_findpassword_prepare">邮件发送中...</string>
    <string name="login_findpassword_success">系统已将密码发送至您的邮箱，请查收！</string>
    <string name="login_findpassword_err_user_none">该用户不存在！</string>
    <string name="login_findpassword_failed">邮件发送失败，请重试！</string>
    <string name="cookies_error">登录已过期，请重新登录哦！</string>
    <string name="register_title">补充个人信息</string>
    <string name="register_set_avatar">设置头像</string>
    <string name="register_nickname">昵称：</string>
    <string name="register_nickname_hint">请输入昵称</string>
    <string name="register_sex">性别：</string>
    <string name="register_woman">女</string>
    <string name="register_man">男</string>
    <string name="register_location">地区：</string>
    <string name="register_activate_account">激活分享笔迹账号</string>
    <string name="register_warning">（必填）</string>
    <string name="register_tip">以后可用此账号直接登录分享笔迹</string>
    <string name="register_username">邮箱账号：</string>
    <string name="register_username_hint">你的常用邮箱(密码找回)</string>
    <string name="register_password">输入密码：</string>
    <string name="register_password_hint">6至16位字母数字组合</string>
    <string name="register_pswdconfirm">确认密码：</string>
    <string name="register_pswdconfirm_hint">请再次输入密码</string>
    <string name="register_err_account_exist">该邮箱账号已存在！</string>
    <string name="register_err_username_format">请输入正确格式的邮箱！</string>
    <string name="register_err_server_internal">呃，服务器可能出了点问题，请稍候再试！</string>
    <string name="register_err_password_format">密码为6至16位的数字和字母组合！</string>
    <string name="register_err_pswdconfirm">两次输入密码不一致！</string>
    <string name="register_dialog_msg">请稍候...</string>
    <string name="register_success">注册成功！</string>
    <string name="register_failed">呃，注册失败了！再试一次吧！</string>
    <string name="register_success_upload_photo_failed">注册成功！但头像上传失败！</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_title_logout">确定退出登录？</string>
    <string name="dialog_title_select">请选择</string>
    <string name="dialog_title_tips">提示</string>
    <string name="dialog_item_txt_share">分享到广场</string>
    <string name="dialog_item_txt_sign">添加标记</string>
    <string name="dialog_item_txt_unsign">取消标记</string>
    <string name="dialog_item_txt_delete">删除</string>
    <string name="dialog_title_delete">确定删除该笔迹？</string>
    <string name="dialog_note_save_hint">请输入标题</string>
    <string name="dialog_note_save_title">标题：</string>
    <string name="about_title">关于</string>
    <string name="about_logo_title">分享笔迹 分享快乐</string>
    <string name="about_version_info">版本信息</string>
    <string name="about_web">官方网站</string>
    <string name="about_blog">官方微博</string>
    <string name="about_check_update">检查更新</string>
    <string name="about_rights">"Copyright@2012 诚迈科技 版权所有"</string>
    <string name="feedback_title">反馈</string>
    <string name="feedback_hint">请输入您的宝贵意见！</string>
    <string name="feedback_commit">提交反馈</string>
    <string name="feedback_err_input_is_null">输入不能为空</string>
    <string name="feedback_commit_success">提交反馈成功</string>
    <string name="feedback_commit_failure">提交反馈失败</string>
    <string name="feedback_commiting_info">正在提交反馈...</string>
    <string name="share_title">分享</string>
    <string name="share_default_text">分享笔迹</string>
    <string name="share_text_others">分享到其他平台</string>
    <string name="share_msg_sina">正在分享到新浪微博...</string>
    <string name="share_msg_qq">正在分享到腾讯微博...</string>
    <string name="share_msg_renren">正在分享到人人网...</string>
    <string name="share_msg_square">正在分享到广场...</string>
    <string name="share_sina_expired">新浪账号授权已过期，需要重新使用新浪账号登录！</string>
    <string name="share_qq_expired">QQ账号授权已过期，请重新使用QQ账号登录！</string>
    <string name="share_renren_expired">人人账号授权已过期，请重新使用人人账号登录！</string>
    <string name="share_err_equal_weibo">你已分享过相同的内容啦！</string>
    <string name="share_success">分享成功!</string>
    <string name="share_failed">呃！分享失败了，再试一次吧！</string>
    <string name="share_click_to_reupload">重试</string>
    <string name="share_dialog_bound">去绑定</string>
    <string name="screen_update_download_finished">下载完成</string>
    <string name="screen_update_download_error">安装包下载出现错误</string>
    <string name="screen_update_click_to_install">下载完成，单击进行安装</string>
    <string name="screen_update_not_need_update">未发现新版本</string>
    <string name="screen_update_have_update">有新版本啦!</string>
    <string name="screen_update_get_new_version">正在获取更新...</string>
    <string name="screen_update_select_to_install">已下载完成,请进行安装！</string>
    <string name="screen_update_install_now">立刻更新</string>
    <string name="screen_update_install_later">稍后更新</string>
    <string name="screen_update_install">安装</string>
    <string name="screen_update_version">新版本:</string>
    <string name="screen_update_version_size">大小:</string>
    <string name="screen_update_version_info">更新说明:</string>
    <string name="screen_update_ok">确定</string>
    <string name="screen_update_error">安装包数字签名不匹配, 请先卸载老版本再进行安装</string>
    <string name="screen_update_download_failed">下载失败!</string>
    <string name="screen_update_exception">更新过程中发生异常</string>
    <string name="screen_version_top_title">版本信息</string>
    <string name="screen_version_title">分享笔迹&#160;v</string>
    <string name="screen_version_check_update">检测更新</string>
    <string name="screen_version_download_update_background">安装包正在后台下载...</string>
    <string name="dialog_check_signature_title">检测新apk</string>
    <string name="dialog_check_signature_checking">正在检测安装包...</string>
    <string name="dialog_check_sinature_not_match">数字签名不匹配，请先卸载旧版本再进行安装！</string>
    <string name="dialog_check_sinature_not_match_info">安装包保存在 sdcard/aNote/package</string>
    <string name="dialog_check_signature_ok">确定</string>
</resources>