<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/content_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bar_background"
        android:paddingLeft="5dip"
        android:paddingRight="5dip" >

        <TextView
            android:id="@+id/tv_title_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textSize="@dimen/main_screen_title_size" />

        <Button
            android:id="@+id/screen_top_play_control_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/screen_go_back_selector" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tips"
            android:textColor="@color/login_text_color" />

   
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="25dp" >

        <TextView
            android:id="@+id/btn_login_sina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:drawableTop="@drawable/btn_sina_selector"
            android:gravity="center_horizontal"
            android:text="@string/login_sina"
            android:textColor="@color/login_text_color" />

        <TextView
            android:id="@+id/btn_login_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableTop="@drawable/btn_qq_selector"
            android:gravity="center_horizontal"
            android:text="@string/login_qq"
            android:textColor="@color/login_text_color" />

        <TextView
            android:id="@+id/btn_login_renren"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:drawableTop="@drawable/btn_renren_selector"
            android:gravity="center_horizontal"
            android:text="@string/login_renren"
            android:textColor="@color/login_text_color" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/listview_divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/login_or"
            android:textColor="@color/login_text_color" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/listview_divider" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/login_edit_background"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText_login_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/edittext_background_color"
            android:hint="@string/login_username"
            android:padding="8dp"
            android:textSize="@dimen/login_register_text_size" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="@drawable/listview_divider" />

        <EditText
            android:id="@+id/editText_login_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/edittext_background_color"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textSize="@dimen/login_register_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="-12dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login_selector"
            android:text="@string/login_btn"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/login_findpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/login_findpassword"
                android:textColor="@color/login_text_color" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>