<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bar_background"
        android:gravity="center"
        android:text="@string/dialog_title_select"
        android:textColor="@color/white"
        android:textSize="@dimen/dialog_title" />

    <TextView
        android:id="@+id/dialog_item_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/list_selector_background"
        android:gravity="left|center_vertical"
        android:padding="15dp"
        android:text="@string/btn_img_source_camera"
        android:textColor="@color/dialog_items_color"
        android:textSize="@dimen/dialog_items" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:background="@drawable/listview_divider" />

    <TextView
        android:id="@+id/dialog_item_local"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/list_selector_background"
        android:gravity="left|center_vertical"
        android:padding="15dp"
        android:text="@string/btn_img_source_local"
        android:textColor="@color/dialog_items_color"
        android:textSize="@dimen/dialog_items" />

</LinearLayout>